# k8s-diagnosis-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.v0.4.7.md  PLAN.v0.7.0.md  README.md  SECURITY.md  TODO.v0.4.5.md  pyproject.toml
.github/ISSUE_TEMPLATE/: v0_4_5_work_item.yml
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  app.py  metrics.py  models.py  runtime_logging.py  service.py
agent/analyzers/: __init__.py  attribution.py  rules.py
agent/config/: settings.py
agent/k8s_client/: __init__.py  base.py  runtime.py
agent/orchestrator/: __init__.py  codex_agent.py  diagnosis_agent.py  responses_client.py
agent/reporting/: __init__.py  diagnosis_reporter.py
agent/tools/: __init__.py  registry.py
agent/triggers/: __init__.py  event_watcher.py  scheduler.py  webhook.py
agent/ui/: __init__.py  http_server.py  templates.py
charts/k8s-diagnosis-agent/: Chart.yaml  values.yaml
deploy/base/: crd.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml  service.yaml
deploy/e2e/: complex-failure.yaml
deploy/grafana/: dashboard.json
docs/: README.md
docs/releases/: v0.4.7.md  v0.4.8.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.6.0.md
docs/testing/: complex-failure-e2e.md  v0.6.0-day4-ui.md  (+1 more)
tests/: test_agent_service.py  test_attribution_scoring.py  test_http_server.py  test_http_ui.py  test_metrics.py  test_model_clients.py  test_rules.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
(+23 files in other folders)
